@@ -3,5 +3,9 @@ WORKDIR /youi
 COPY project project
 COPY src src
 COPY build.sbt build.sbt
-RUN sbt assembly -batch
-CMD ["java", "-server", "-Xms1g", "-Xmx1g", "-XX:NewSize=512m", "-XX:MaxNewSize=512m", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-XX:+UseNUMA", "-XX:-UseBiasedLocking", "-XX:+AlwaysPreTouch", "-jar", "target/scala-2.12/youi-server-assembly-1.0.jar"]
+RUN sbt pack
+WORKDIR /youi/target/pack
+
+EXPOSE 8080
+
+CMD ["bin/main"]
